# DosPY

./: README.md  beta[DONTUSE].py  main.py  outsidenodes.md  pyproject.toml
static/css/: stylesheet.css
static/js/: DOS-API.js  rain.js
templates/: MortalKombat.html  castlevania.html  doom.html  doom2.html  dos.html  index.html  index[beta].html  prince.html  quake.html  wolf.html
