[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "a version of dos to play unblocked games at school"
name = "dospy"
version = "1.2.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.8"
[tool.poetry.dev-dependencies]
